# ai-cluster

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PROMPTS.md  README.md  WORK_PLAN.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/skills/commit/: SKILL.md
.github/workflows/: ci.yml
config/: alerts.yml  coordinator.yaml  logging.yaml  models.toml  prometheus.yml  worker.toml
coordinator/: Dockerfile.coordinator  __init__.py  api.py  config.py  coordinator.py  discovery.py  main.py  models.py  monitoring.py  requirements.txt  router.py  utils.py  worker.py
coordinator/proto/: __init__.py  cluster_pb2.py  cluster_pb2_grpc.py
coordinator/tests/: conftest.py  test_config.py  test_models.py  test_router.py
docker/: Dockerfile.coordinator  Dockerfile.worker  Dockerfile.worker.amd  Dockerfile.worker.nvidia  README.md  docker-compose.full.yml  docker-compose.gpu.yml  entrypoint.sh
docs/: api_reference.md  architecture.md  configuration.md  deployment.md  problem_solution.md  troubleshooting.md
proto/: cluster.proto
scripts/: benchmark.py  convert_model.py  setup_cuda.sh  setup_rocm.sh
tests/: cluster_chat.py  interactive_chat.py  swarm_orchestrator.py  test_client.py  test_coordinator.py  test_grpc_status.py  test_protobuf_serialization.py  test_pull_model.py  test_worker.rs
worker/: Cargo.toml  Dockerfile.worker  build.rs
worker/benches/: inference.rs
worker/config/: worker.toml
worker/examples/: debug_hf.rs
worker/models/: common.rs  deepseek.rs  llama.rs  mistral.rs  mod.rs  qwen.rs
worker/src/: backend.rs  config.rs  error.rs  gpu_manager.rs  main.rs  metrics.rs  model_loader.rs  parallelism.rs  worker.rs
