[workspace]
  members = [
      "coordinator",
      "worker",
  ]

  [workspace.dependencies]
  burn = "0.4"
  burn-tensor = "0.4"
  burn-optimizer = "0.4"
  burn-core = "0.4"
  anyhow = "1.0"
  tokio = { version = "1", features = ["full"] }
  tonic = "0.9"
  prost = "0.9"
  serde = { version = "1.0", features = ["derive"] }
  serde_json = "1.0"
  prometheus = "0.13"