[package]
name = "ai-worker"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust worker for AI inference with Burn"
authors = ["Carlos Estrada <caestrada1103@gmail.com>"]
license = "MIT"
repository = "https://github.com/caestrada1103/ai-cluster"

[features]
default = ["hip"]  # Default to AMD ROCm
cuda = ["burn/cuda", "burn-tensor/cuda", "dep:burn-cuda"]
hip = ["burn/hip", "burn-tensor/hip", "dep:burn-hip"]
wgpu = ["burn/wgpu", "burn-tensor/wgpu"]
metal = ["burn/metal", "burn-tensor/metal"]  # For macOS
python = ["dep:pyo3"]  # Optional Python bindings

[dependencies]
# Burn core
burn = { version = "0.19", default-features = false, features = ["train", "std"] }
burn-tensor = { version = "0.19", default-features = false }
burn-core = { version = "0.19", default-features = false }
burn-dataset = { version = "0.19", default-features = false }
burn-autodiff = { version = "0.19", default-features = false, optional = true }

# GPU backends (selected via features)
burn-cuda = { version = "0.19", optional = true }
burn-hip = { version = "0.19", optional = true }
burn-wgpu = { version = "0.19", optional = true }

# CubeCL for custom kernels
burn-cubecl = "0.19"
cubecl = "0.9"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# gRPC
tonic = "0.10"
prost = "0.12"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Metrics
prometheus = { version = "0.13", features = ["process"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# HTTP for metrics
axum = "0.7"
hyper = { version = "1.0", features = ["full"] }

# Utilities
chrono = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
once_cell = "1.19"
parking_lot = "0.12"
dashmap = "5.5"
lru = "0.12"
num_cpus = "1.16"

# Model loading
safetensors = "0.4"
tokenizers = "0.15"  # HuggingFace tokenizers
hf-hub = "0.3"  # HuggingFace hub client

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"

[[bench]]
name = "inference"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3