[package]
name = "ai-worker"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust worker for AI inference with Burn"
authors = ["Carlos Estrada <caestrada1103@gmail.com>"]
license = "MIT"
repository = "https://github.com/caestrada1103/ai-cluster"

[features]
default = ["wgpu"]  # Auto-detects GPU (NVIDIA, AMD, Intel) via Vulkan/DX12
cuda = ["burn/cuda"]      # Opt-in: native CUDA for best NVIDIA perf
rocm = ["burn/rocm"]      # Opt-in: native ROCm for best AMD perf
wgpu = ["burn/wgpu"]      # Cross-platform GPU via Vulkan/DX12/Metal
metal = ["wgpu", "burn/metal"]  # macOS Metal via wgpu
ndarray = ["burn/ndarray"]      # CPU-only fallback
python = ["dep:pyo3"]

[dependencies]
# Burn deep learning framework
# Backends are activated via features above; wgpu auto-detects GPU vendor
burn = { version = "0.19", default-features = false, features = ["std", "train", "autodiff"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# gRPC
tonic = "0.10"
prost = "0.12"
tonic-reflection = "0.10"
tonic-health = "0.10"
async-stream = "0.3"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Metrics
prometheus = { version = "0.13", features = ["process"] }
metrics = "0.21"
metrics-exporter-prometheus = "0.12"

# HTTP for metrics server
axum = "0.7"
hyper = { version = "1.0", features = ["full"] }

# Utilities
chrono = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
once_cell = "1.19"
parking_lot = "0.12"
dashmap = "5.5"
lru = "0.12"
num_cpus = "1.16"

# Model loading
safetensors = "0.4"
tokenizers = { version = "0.15", features = ["http"] }
hf-hub = { version = "0.4.3", features = ["tokio"] }
half = "2.3"

# Optional Python bindings
pyo3 = { version = "0.20", optional = true }

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"
tracing-test = "0.2"
proptest = "1.4"
async-trait = "0.1"

[[bench]]
name = "inference"
harness = false